--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </table>
 <br><br><br>
 <span class="style4">THIS INFORMATION IS NOT MEDICAL.&nbsp;&nbsp;&nbsp;&nbsp; <br>
-DONT TAKE I INTO CONSIDIRATION!* 
+DONT TAKE IT INTO CONSIDIRATION!* 
 </span> 
 </body>
 
