--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 				</tr>
 				<tr>
 								<td style="width: 150px; height: 200px">
-								<h2 class="style4">Comparison between bald and Jperm:</h2>
+								<h2>Comparison between bald and Jperm:</h2>
 								</td>
 								<td style="width: 328px; height: 200px" class="style1">
-								<h3 class="style5">Bald: it&#39;s a symptom in which 
+								<h3>Bald: it&#39;s a symptom in which 
 								you&#39;re born with and have no control over it and 
 								it&#39;s not actually bad.<br />
 								<br />
@@ -74,7 +74,7 @@
 								only ahs 6 layers of skin instead of 7.</h3>
 								</td>
 								<td>
-								<h3 class="style4">Conclusion: Jperm is the baldest creature to 
+								<h3>Conclusion: Jperm is the baldest creature to 
 								ever walk on earth on another planet and due to 
 								the lack of his hair he suffers from severe cold 
 								and weakening of skin.</h3>
