--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<h4 align="center">Sere's Study</h4>
+<h4 align="center">Sere's Studies</h4>
 <table style="width: 799px; height: 808px" align="center">
 				<tr>
 								<td colspan="3" style="width: 600px; height: 100px">
