--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<td style="width: 328px; height: 200px" class="style1">
 								<h3 class="style1">a jperm is a creature also 
 								referred to as &quot;Jperrm&quot; or sometimes &quot;Joseph&quot; 
-								and its extremely contagious not to mention 
-								that it&#39;s bite is toxic.<br />
+								and it&#39;s extremely contagious not to mention 
+								that its bite is toxic.<br />
 								Example-----------------------&gt;</h3>
 								</td>
 								<td class="style3">&nbsp;&nbsp;&nbsp;&nbsp;
