--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<title> Sere's studies</title>
 <style type="text/css">
 .style1 {
 				text-align: left;
