--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<br />
 								Jperm: it&#39;s an extremely toxic creature with no 
 								hair on any part of the body what so ever and 
-								only ahs 6 layers of skin instead of 7.</h3>
+								only has 6 layers of skin instead of 7.</h3>
 								</td>
 								<td>
 								<h3>Conclusion: Jperm is the baldest creature to 
