--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								Example-----------------------&gt;</h3>
 								</td>
 								<td class="style3">&nbsp;&nbsp;&nbsp;&nbsp;
-								<a href="http://www.Horsescary.com">
+								<a href="http://jperm.horsescary.com/">
 								<img alt="" src="baldperm.png" width="100" height="162" class="style2" /></a></td>
 				</tr>
 				<tr>
