--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								</td>
 								<td style="width: 328px; height: 200px" class="style1">
 								<h3 class="style1">a jperm is a creature also 
-								referred to as &quot;Jperrm&quot; or sometimes &quot;Joseph&quot; 
+								referred to as &quot;Jperrm&quot; or sometimes &quot;Jgram&quot; 
 								and it&#39;s extremely contagious not to mention 
 								that its bite is toxic.<br />
 								Example-----------------------&gt;</h3>
